fixed overflow

--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -7,5 +7,4 @@
   padding-bottom: 90px;
   background-color: #1f1f1f;
   color: white;
-  overflow: hidden;
 }
